gitops-charts/robot-shop/templates/istio-robotshop-gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: robotshop-gateway
  namespace: robot-shop
  annotations:
    argocd.argoproj.io/sync-wave: "-500"
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  selector:
    istio: ingressgateway # default Istio controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: robotshop-web-vs
  annotations:
    argocd.argoproj.io/sync-wave: "-500"
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  hosts:
  - "*"
  gateways:
  - robotshop-gateway
  http:
  # default route
  - route:
    - destination:
        host: web.robot-shop.svc.cluster.local
        port:
          number: 8080
